@@ -2,6 +2,7 @@
 struct apstaessidlist_s
 {
  uint32_t	tv_sec;
+ uint32_t	tv_usec;
  uint8_t	mac_ap[6];
  uint8_t	mac_sta[6];
  uint8_t	essidlen;
@@ -10,10 +11,18 @@ struct apstaessidlist_s
 typedef struct apstaessidlist_s apstaessidl_t;
 #define	APSTAESSIDLIST_SIZE (sizeof(apstaessidl_t))
 /*===========================================================================*/
-static int sort_apstaessidlist_by_ap(const void *a, const void *b)
+static int sort_apstaessidlist_by_timestamp(const void *a, const void *b)
 {
 const apstaessidl_t *ia = (const apstaessidl_t *)a;
 const apstaessidl_t *ib = (const apstaessidl_t *)b;
+if(ia->tv_sec > ib->tv_sec)
+	return 1;
+else if(ia->tv_sec < ib->tv_sec)
+	return -1;
+if(ia->tv_usec > ib->tv_usec)
+	return 1;
+else if(ia->tv_usec < ib->tv_usec)
+	return -1;
 if(memcmp(ia->mac_ap, ib->mac_ap, 6) > 0)
 	return 1;
 else if(memcmp(ia->mac_ap, ib->mac_ap, 6) < 0)
@@ -25,10 +34,6 @@ else if(memcmp(ia->mac_sta, ib->mac_sta, 6) < 0)
 if(memcmp(ia->essid, ib->essid, 32) > 0)
 	return 1;
 else if(memcmp(ia->essid, ib->essid, 32) < 0)
-	return -1;
-if(ia->tv_sec > ib->tv_sec)
-	return 1;
-else if(ia->tv_sec < ib->tv_sec)
 	return -1;
 return 0;
 }
@@ -47,6 +52,7 @@ return 0;
 struct anoncelist_s
 {
  uint32_t	tv_sec;
+ uint32_t	tv_usec;
  uint8_t	mac_ap[6];
  uint8_t	mac_sta[6];
  uint8_t	keyinfo;
@@ -56,10 +62,18 @@ struct anoncelist_s
 typedef struct anoncelist_s anoncel_t;
 #define	ANONCELIST_SIZE (sizeof(anoncel_t))
 /*===========================================================================*/
-static int sort_anoncelist_by_ap(const void *a, const void *b)
+static int sort_anoncelist_by_timestamp(const void *a, const void *b)
 {
 const anoncel_t *ia = (const anoncel_t *)a;
 const anoncel_t *ib = (const anoncel_t *)b;
+if(ia->tv_sec > ib->tv_sec)
+	return 1;
+else if(ia->tv_sec < ib->tv_sec)
+	return -1;
+if(ia->tv_usec > ib->tv_usec)
+	return 1;
+else if(ia->tv_usec < ib->tv_usec)
+	return -1;
 if(memcmp(ia->mac_ap, ib->mac_ap, 6) > 0)
 	return 1;
 else if(memcmp(ia->mac_ap, ib->mac_ap, 6) < 0)
@@ -72,16 +86,13 @@ if(memcmp(ia->anonce, ib->anonce, 32) > 0)
 	return 1;
 else if(memcmp(ia->anonce, ib->anonce, 32) < 0)
 	return -1;
-if(ia->tv_sec > ib->tv_sec)
-	return 1;
-else if(ia->tv_sec < ib->tv_sec)
-	return -1;
 return 0;
 }
 /*===========================================================================*/
 struct eapollist_s
 {
  uint32_t	tv_sec;
+ uint32_t	tv_usec;
  uint8_t	mac_ap[6];
  uint8_t	mac_sta[6];
  uint8_t	keyinfo;
@@ -92,10 +103,18 @@ struct eapollist_s
 typedef struct eapollist_s eapoll_t;
 #define	EAPOLLIST_SIZE (sizeof(eapoll_t))
 /*===========================================================================*/
-static int sort_eapollist_by_ap(const void *a, const void *b)
+static int sort_eapollist_by_timestamp(const void *a, const void *b)
 {
 const eapoll_t *ia = (const eapoll_t *)a;
 const eapoll_t *ib = (const eapoll_t *)b;
+if(ia->tv_sec > ib->tv_sec)
+	return 1;
+else if(ia->tv_sec < ib->tv_sec)
+	return -1;
+if(ia->tv_usec > ib->tv_usec)
+	return 1;
+else if(ia->tv_usec < ib->tv_usec)
+	return -1;
 if(memcmp(ia->mac_ap, ib->mac_ap, 6) > 0)
 	return 1;
 else if(memcmp(ia->mac_ap, ib->mac_ap, 6) < 0)
@@ -107,10 +126,6 @@ else if(memcmp(ia->mac_sta, ib->mac_sta, 6) < 0)
 if(memcmp(ia->eapol, ib->eapol, 256) > 0)
 	return 1;
 else if(memcmp(ia->eapol, ib->eapol, 256) < 0)
-	return -1;
-if(ia->tv_sec > ib->tv_sec)
-	return 1;
-else if(ia->tv_sec < ib->tv_sec)
 	return -1;
 return 0;
 }
